examples/datalog/28_docs_coverage/08_syntax_schemas.dl
% Test: Syntax Schema Declarations
% Category: docs_coverage
% Description: Tests schema declarations from docs/reference/syntax.md

.kg create syntax_schemas
.kg use syntax_schemas

% === Basic schema ===
+employee(id: int, name: string, dept: string).

% Insert data matching schema
+employee[(1, "alice", "engineering"), (2, "bob", "sales")].

?- employee(Id, Name, Dept).

% === Schema with all types ===
+example(
  a: int,
  b: float,
  c: string,
  d: vector
).

+example(1, 3.14, "test", [0.1, 0.2, 0.3]).

?- example(A, B, C, D).

% Cleanup
.kg use default
.kg drop syntax_schemas

